Improved FE Macro webapp output border visibility

--- a/WebGUI/html/FEMacroTest.html
+++ b/WebGUI/html/FEMacroTest.html
@@ -756,7 +756,8 @@
 								"id"		: "verticalLayoutOutputDiv",
 								"style"		: "overflow:auto; width:" + 
 									verticalOutputDivSize_[0] + "px; height:" + 
-									verticalOutputDivSize_[1] + "px; resize: both;",									
+									verticalOutputDivSize_[1] + "px; resize: both;" +
+									"border-bottom: 1px solid lightgray;",	//without bottom-border, too hard to tell why output is cutoff at times								
 							},
 							"" /*innerHTML*/,
 							false /*doCloseTag*/);
