--- a/WebGUI/html/FEMacroTest.html
+++ b/WebGUI/html/FEMacroTest.html
@@ -184,6 +184,13 @@
 			grid-template-columns: 1fr;
 			float: right;
 		}
+
+		#history-status 
+		{
+			float: left;
+    		margin: -20px -100px -100px -10px;
+			width: 650px;
+		}
 		
 	</style>
 	
@@ -577,6 +584,7 @@
 		//=====================================================================================
 		//runMacro ~~
 		var verticalOutputDivSize_ = [600,1000];
+		var verticalOutputScrollPosition_ = [0,0];
 		var row, col;
 		function runMacro(r, c)
 		{
@@ -587,7 +595,10 @@
 			if(el)
 			{
 				Debug.log("Found output div at size ",el.offsetWidth,el.offsetHeight);
-				verticalOutputDivSize_ = [el.offsetWidth,el.offsetHeight];
+				verticalOutputDivSize_ = [el.offsetWidth,el.offsetHeight-1];
+				Debug.log("Found output div at scroll position ",el.scrollLeft,el.scrollTop);
+				verticalOutputScrollPosition_ = [el.scrollLeft,el.scrollTop];
+
 				el = document.getElementById("macroModule-output");
 				el.style.width = (verticalOutputDivSize_[0] + 30) + "px";
 			}
@@ -694,7 +705,8 @@
 					, postData, 
 					handleMacroResponse,
 					0 /*reqParam*/, 0 /*progressHandler*/, 
-					true /*callHandlerOnErr*/
+					true /*callHandlerOnErr*/,
+					true /*doNotShowLoadingOverlay*/
 					);
 			}
 			
@@ -718,10 +730,14 @@
 				appendHistoryRecord(JSON.stringify(command));
 		} //end runMacro()
 		
+		//=====================================================================================
+		//handleMacroResponse ~~
 		function handleMacroResponse(req, reqParam, errStr) 
 		{
 			var el;
 			var scrollTop = DesktopContent.getWindowScrollTop();
+			Debug.logv({scrollTop});
+			
 			if(verticalOrientation_)
 				el = document.getElementById("macroModule-output");			
 			else
@@ -899,12 +915,30 @@
 				str += "<br>";
 			}
 			if(verticalOrientation_)
+			{
 				str += "</div>"; //close scrolling div
+
+				var el2 = document.getElementById("history-status");
+				if(el2)
+				{
+					var str2 = "Last ran... " + getDateString(new Date);
+					el2.innerHTML = str2;
+				}
+			}
 			el.innerHTML = str;
 
-			Debug.log("Returning scroll position", 
-			DesktopContent.getWindowScrollTop(),"to",scrollTop);
+			Debug.log("Returning page scroll position", 
+				DesktopContent.getWindowScrollTop(),"to",scrollTop);
 			DesktopContent.setWindowScrollTop(scrollTop);	
+
+			var el = document.getElementById("verticalLayoutOutputDiv");
+			if(el)
+			{
+				Debug.log("Returning vertical output el scroll position", 
+					verticalOutputScrollPosition_[0],verticalOutputScrollPosition_[1]);
+				el.scrollLeft = verticalOutputScrollPosition_[0];
+				el.scrollTop = verticalOutputScrollPosition_[1];
+			}	
 
 			if (isFlagActive)
 			{
@@ -1081,7 +1115,7 @@
 					}
 				}, intervalTime);
 			}
-		}
+		} //end handleMacroResponse()
 
 		//=====================================================================================
 		//getDateString ~~
@@ -1166,12 +1200,13 @@
 							"width": "400px",
 						},
 						"<div style='display: flex; justify-content: space-between; align-items: center; width: 100%; margin-bottom: 5px;'>" + 
-							"<h3>Command history</h3>" +
+							"<h3>Command history</h3>" + 
 							"<div>" +
 								"<button id='liveViewBtn' onClick='toggleLiveView()' style='margin-right: 5px;'>Live View</button>" + 
 								"<button id='flagTriggerButton' onClick='PopupMacroFlagAlert()' style='background-color: light gray; border: 1px solid gray; cursor: pointer; font-size: 15px; padding: 3px 10px; border-radius: 5px;'>🚩</button>" +
 							"</div>" +
 						"</div>" + 
+						"<div id='history-status'></div>" +
 						"<div style='display: flex; justify-content: flex-end; align-items: center;'>" +
 							"<div style='display: flex; flex-direction: column; align-items: flex-end;'>" +
 								"<div style='margin-bottom: 5px;'>Delay: <span id='delayValue'>2 seconds</span></div>" +
@@ -2209,6 +2244,25 @@
 				appendMacroToSequence(JSON.stringify(recordObj));
 				return;
 			}
+
+			var el = document.getElementById("verticalLayoutOutputDiv");
+			if (el)
+			{
+				Debug.log("Found output div at size ",el.offsetWidth,el.offsetHeight);
+				verticalOutputDivSize_ = [el.offsetWidth,el.offsetHeight-1];
+				Debug.log("Found output div at scroll position ",el.scrollLeft,el.scrollTop);
+				verticalOutputScrollPosition_ = [el.scrollLeft,el.scrollTop];
+
+				el = document.getElementById("macroModule-output");
+				el.style.width = (verticalOutputDivSize_[0] + 30) + "px";
+			}
+
+
+			var str = "";
+			str += "Launched... " + getDateString(new Date) + 
+					".. waiting for response...";
+			var el = document.getElementById("history-status");
+			el.innerHTML = str;
 			
 			var postData = "inputArgs=" + recordObj["inputArgs"] + "&outputArgs=" + recordObj["outputArgs"];
 			DesktopContent.XMLHttpRequest("Request?RequestType=runFEMacro" +					
@@ -2221,28 +2275,10 @@
 					, postData, 
 					handleMacroResponse,
 					0 /*reqParam*/, 0 /*progressHandler*/, 
-					true /*callHandlerOnErr*/
+					true /*callHandlerOnErr*/,
+					true /*doNotShowLoadingOverlay*/
 					);
-
-			var el = document.getElementById("verticalLayoutOutputDiv");
-
-			if (el)
-			 {
-				var currentWidth = el.offsetWidth;
-				var currentHeight = el.offsetHeight;
-
-				if (verticalOutputDivSize_[0] !== currentWidth || verticalOutputDivSize_[1] !== currentHeight) 
-				{
-					verticalOutputDivSize_ = [currentWidth, currentHeight];
-				}
-
-				var macroOutputEl = document.getElementById("macroModule-output");
-
-				if (macroOutputEl) 
-				{
-					macroOutputEl.style.width = verticalOutputDivSize_[0] + "px";
-				}
-			}
+			
 
 			// show the command in the interface
 			appendHistoryRecord(JSON.stringify(recordObj));
@@ -3037,24 +3073,17 @@
 		function onClickRunSequence()
 		{
 			var toggleButton = document.getElementById("runSequenceBtn");
-			var el = document.getElementById("verticalLayoutOutputDiv");
 			
-			if (el)
+			var el = document.getElementById("verticalLayoutOutputDiv");			
+			if(el)
 			{
-				var currentWidth = el.offsetWidth;
-				var currentHeight = el.offsetHeight;
+				Debug.log("Found output div at size ",el.offsetWidth,el.offsetHeight);
+				verticalOutputDivSize_ = [el.offsetWidth,el.offsetHeight-1];
+				Debug.log("Found output div at scroll position ",el.scrollLeft,el.scrollTop);
+				verticalOutputScrollPosition_ = [el.scrollLeft,el.scrollTop];
 
-				if (verticalOutputDivSize_[0] !== currentWidth || verticalOutputDivSize_[1] !== currentHeight) 
-				{
-					verticalOutputDivSize_ = [currentWidth, currentHeight];
-				}
-
-				var macroOutputEl = document.getElementById("macroModule-output");
-
-				if (macroOutputEl)
-				{
-					macroOutputEl.style.width = verticalOutputDivSize_[0] + "px";
-				}
+				el = document.getElementById("macroModule-output");
+				el.style.width = (verticalOutputDivSize_[0] + 30) + "px";
 			}
 
 			if (!selectedSequence_ || Object.keys(selectedSequence_).length === 0)
@@ -3145,7 +3174,8 @@
 					postData, 
 					handleMacroResponse,
 					0 /*reqParam*/, 0 /*progressHandler*/, 
-					true /*callHandlerOnErr*/
+					true /*callHandlerOnErr*/,
+					true /*doNotShowLoadingOverlay*/
 				);
 
 				appendHistoryRecord(JSON.stringify(command));
