Renamed config GUI group edit link to include that the group can be renamed.

--- a/WebGUI/html/ConfigurationGUI.html
+++ b/WebGUI/html/ConfigurationGUI.html
@@ -2485,7 +2485,7 @@
 
 			str += "<br><a href='#' onclick='addMemberToConfigGroup(\"" +
 				groupName + "\",\"" + returnToHereLink + "\"); return false;'>";
-			str += "Add/Remove/Modify Member Tables</a> for group '" + groupName + "(" + groupKey + ")'";
+			str += "Rename Group or Add/Remove/Modify Member Tables</a> for group '" + groupName + "(" + groupKey + ")'";
 
 			str += "<br>";
 			var setMembersToDefaultReq =
@@ -11337,7 +11337,7 @@
 							//Important! similar to ConfigurationGUI.html: tableLinkTooltip(): L:11860
 							// CHANGES MUST BE PROPAGATED
 							"To add a table to a group, click the group name to go to the " +
-							"group view, then click 'Add/Remove/Modify Member Tables.' You " +
+							"group view, then click 'Rename Group or Add/Remove/Modify Member Tables.' You " +
 							"can then add or remove tables and save the new group." +
 							"\n\n" +
 							"OR!!! Click the following button to add the table '" + treeEditingTargetTable_ +
