--- a/WebGUI/html/SlowControlsDashboardEdit.html
+++ b/WebGUI/html/SlowControlsDashboardEdit.html
@@ -452,7 +452,7 @@
 						}, //end handler
 						0, 0, true,//reqParam, progressHandler, callHandlerOnErr, 
 						false,//doNotShowLoadingOverlay,
-						true //targetSupervisor
+						true //targetGatewaySupervisor
 						);
 
 				widgetTilesEl_ 				= document.getElementById("widgetTilesContainer");
