--- a/WebGUI/html/ConfigurationGUI_artdaq.html
+++ b/WebGUI/html/ConfigurationGUI_artdaq.html
@@ -280,7 +280,7 @@
 					}, //end handler
 					0, 0, 0,//reqParam, progressHandler, callHandlerOnErr, 
 					false,//doNotShowLoadingOverlay,
-					true //targetSupervisor
+					true //targetGatewaySupervisor
 			); //end getAppId request
 
 			if(_checkActiveGroupsTimer)
