--- a/WebGUI/html/Console.html
+++ b/WebGUI/html/Console.html
@@ -643,7 +643,7 @@
 						}, //end handler
 						0, 0, true,//reqParam, progressHandler, callHandlerOnErr, 
 						false,//doNotShowLoadingOverlay,
-						true //targetSupervisor
+						true //targetGatewaySupervisor
 				); //end getAppId request
 				
 			} //end init()
