--- a/WebGUI/html/widgets/root_visualizer.html
+++ b/WebGUI/html/widgets/root_visualizer.html
@@ -63,7 +63,7 @@
 						}, //end handler
 						0, 0, true,//reqParam, progressHandler, callHandlerOnErr, 
 						false,//doNotShowLoadingOverlay,
-						true //targetSupervisor
+						true //targetGatewaySupervisor
 				); //end getAppId request
 				//getting the LID
 
