Minor error text change

--- a/WebGUI/html/StateMachine.html
+++ b/WebGUI/html/StateMachine.html
@@ -1028,7 +1028,7 @@
 									else										
 										Debug.warn("State was changed unexpectedly from " + 
 											_stateNames[_currState] + " to " + _stateNames[i] +
-											". (Likely there was a error transitioning a Supervisor)");
+											". (Likely another user changed the state)");
 								}
 								else
 								{
