Fix to tree-view multi-step editing handling; Debug pop fix to identify code/line number for .icc file types.

--- a/WebGUI/html/ConfigurationGUI.html
+++ b/WebGUI/html/ConfigurationGUI.html
@@ -7764,7 +7764,7 @@
 
 					el.innerHTML = str;
 				},
-				0, 0, true); //reqParam, progressHandler, callHandlerOnErr
+				0, 0, true, true); //reqParam, progressHandler, callHandlerOnErr, doNotShowLoadingOverlay
 		} //end treeViewGroupMemberEditMultiSelectHandler()
 
 		//==============================================================================
@@ -11503,7 +11503,10 @@
 
 							//recover (possibly) modified target table
 							treeEditingTargetTable_ = initTargetTable;
-							editCellCancel();
+							
+							//do not cancel at this point, because still editing cell for multi-step link/record editing, but indicate request is done
+							// editCellCancel();
+							_handlingTreeNodeOK = false;
 						}, 0, 0, true //reqParam, progressHandler, callHandlerOnErr
 					); //end of saveTreeNodeEdit call
 				}
